--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,6 +1,7 @@
-<% provide(:title, "Contact") %>
-<h1>Contact</h1>
+<% provide :title, t(".title") %>
+<h1><%= t ".title" %></h1>
 <p>
-  Contact the Ruby on Rails Tutorial about the sample app at the
-  <a href="http://www.railstutorial.org/contact">contact page</a>.
-</p>
+ <%= t ".text-1" %>
+  <a href="http://www.railstutorial.org/contact"> <%= t ".text-2" %></a>.
+</p
+
