--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,7 @@
-<% provide(:title, "Home") %>
-<h1>Sample App</h1>
+<% provide :title, t(".title") %>
+<h1><%= t ".title" %></h1>
 <p>
-  This is the home page for the
-  <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
-  sample application.
+  <%= t ".text-1" %>
+  <a href="http://www.railstutorial.org/"><%= t ".text-2" %></a>
+  <%= t ".text-3" %>
 </p>
