--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,13 +1,13 @@
 <footer class="footer">
   <small>
-    The <a href="http://www.railstutorial.org/"><%=t "rubyonrailstutorrial"%></a>
-    by <a href="http://www.michaelhartl.com/"><%=t "michaelhartl"%></a>
+    <%= t "text-4" %> <a href="http://www.railstutorial.org/"><%= t "text-3" %></a>
+   <%= t "text-5" %> <a href="http://www.michaelhartl.com/"><%= t "text-1" %></a>
   </small>
   <nav>
     <ul>
-      <li><%= link_to t(".about"),   "#" %></li>
-      <li><%= link_to t(".contact"), "#" %></li>
-      <li><a href="http://news.railstutorial.org/"><%=t "news"%></a></li>
+      <li><%= link_to t("static_pages.about.title"), about_path %></li>
+      <li><%= link_to t("static_pages.contact.title"), contact_path %></li>
+      <li><a href="http://news.railstutorial.org/"><%=t "text-2"%></a></li>
     </ul>
   </nav>
 </footer>
