--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,12 @@
     <%= javascript_include_tag "application", "data-turbolinks-track ":"reload" %>
   </head>
   <body>
-    <%= yield %>
+   <body>
+    <%= render "layouts/header" %>
+    <div class="container">
+       <%= yield %>
+       <%= render "layouts/footer" %>
+    </div>
+  </body>
   </body>
 </html>
