--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -2,14 +2,10 @@
 <h1><%= t ".title" %></h1>
 <p>
   The <a href="http://www.railstutorial.org/"><em><%= t ".base_title" %>
-  Tutorial</em></a> is a
+  <%= t ".text-8" %></em></a> <%= t ".text-5" %>
   <a href="http://www.railstutorial.org/book"><%= t ".text-1" %></a> <%= t ".text-6"%>
   <a href="http://screencasts.railstutorial.org/"><%= t ".text-2" %></a>
   <%= t ".text-7" %>
   <a href="http://rubyonrails.org/"><%= t ".base_title" %></a>.
    <%= t ".text-3" %>
-<<<<<<< 810f04884ac6568faf42e65921b20a7e69012cc7
-=======
-
->>>>>>> Finish Chapter 3
 </p>
