--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -2,9 +2,5 @@
 <h1><%= t ".title" %></h1>
 <p>
  <%= t ".text-1" %>
-  <a href="http://www.railstutorial.org/contact"> <%= t ".text-2" %></a>.
+  <a href="http://www.railstutorial.org/contact"> <%= t ".text-2" %></a>
 </p
-<<<<<<< 810f04884ac6568faf42e65921b20a7e69012cc7
-=======
-
->>>>>>> Finish Chapter 3
