--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,11 +1,10 @@
 <% provide :title, t(".title") %>
 <h1><%= t ".title" %></h1>
 <p>
-   <%= t ".text-1" %>
+  <%= t ".text-1" %>
   <a href="http://www.railstutorial.org/help">
-    <%= t ".text-2" %></a>.
- <%= t ".text-3" %>
+  <%= t ".text-2" %></a>.
+  <%= t ".text-3" %>
   <%= t ".text-4" %>
-  <a href="http://www.railstutorial.org/book"><em> <%= t ".text-5" %></em>
-  book</a>.
+  <a href="http://www.railstutorial.org/book"><em> <%= t ".text-5" %></em>book</a>.
 </p>
