--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,24 @@
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to t("static_pages.home.title"), "/" %></li>
         <li><%= link_to t("static_pages.help.title"), "/help" %></li>
-        <li><%= link_to t("static_pages.signup.title"), "/signup" %></li>
+       <% if logged_in? %>
+          <li><%= link_to t(".users"), '#' %></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              Account <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to t(".profile"), current_user %></li>
+              <li><%= link_to t(".settings"), '#' %></li>
+              <li class="divider"></li>
+              <li>
+                <%= link_to t(".logout"), logout_path, method: :delete %>
+              </li>
+            </ul>
+          </li>
+        <% else %>
+          <li><%= link_to t(".login"), login_path %></li>
+        <% end %>
       </ul>
     </nav>
   </div>
